--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Martin Sjogard | Neuroscience, Data Science, and Research"
 description: "Brain and data stuff"
 author: "Martin Sjogard"
-keywords: [neuroscience, EEG, MEG, sleep research, data science, Martin Sjogard, Martin Sjoegaard]
+keywords: [neuroscience, EEG, MEG, sleep research, data science, Martin Sjoegaard]
 format: html
 ---
 
