--- a/posts/quicksummaries_localspindles/index.qmd
+++ b/posts/quicksummaries_localspindles/index.qmd
@@ -11,3 +11,12 @@ This is a non-technical (or at least less technical) summary of the paper "Incre
 
 
 ## Background: Learning and consolidation
+Motor tasks like the finger-tapping task are easy to use when studying memory, as they can be very standardized. In this case, *tap a sequence of five numbers on a keypad as quickly and accurately as you can for 30 seconds. Then rest 30 seconds and repeat for 12 total trials*. Instructions are simple, the task involved very little higher-level cognitive processing or sensory input, there's no language component, and it is not tiring. The outcome measures are easy to calculate and conceptualize, e.g. *the number of correctly typed sequences per trial* or *typing speed for correctly typed sequences*. Here we're studying the total amount of learning, so we calculate the percent increase in the amount of correct sequences typed from the first trial to the average of the last three trials.
+
+![Total learning](learning.pdf){width=300}
+
+Continued ...
+
+![Venn diagram](learning.pdf){width=300}
+
+Continued ...
