--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Martin Sjogard | Neuroscience, Data Science, and Research"
-subtitle: "Brain and data stuff."
+title: "Martin Sjogard | Brain and data stuff"
+subtitle: " "
 format: html
 
 about: 
@@ -19,7 +19,7 @@ about:
 ---
 
 ## About Me
-On the left is a 3D printed model of my own actual brain, made from an MRI scan.
+On the left is a high-resolution 3D printed copy of my own brain.
 
 I am a clinical data scientist in the [Sleep, Cognition and Neuropsychology](https://manoachlab.mgh.harvard.edu/) lab at [Massachusetts General Hospital](https://www.massgeneral.org/) and a postdoctoral research fellow at [Harvard Medical School](https://hms.harvard.edu/).
 
