--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,9 @@ about:
     - icon: file-text
       text: Google Scholar
       href: https://scholar.google.com/citations?hl=en&user=F59U3gEAAAAJ&view_op=list_works&sortby=pubdate
+    - icon: file-text
+      text: CV
+      href: CV_Martin_Sjogard.pdf
 
 ---
 
