--- a/index.qmd
+++ b/index.qmd
@@ -9,8 +9,7 @@ about:
   image-alt: Yellow brain
   image-shape: round
   links:
-    - icon: linkedin
-      text: LinkedIn
+    - text: "{{< iconify fa6-brands linkedin >}}"
       href: https://www.linkedin.com/in/martinsjogard/
     - icon: file-text
       text: Google Scholar
@@ -19,6 +18,7 @@ about:
       text: CV
       href: CV_Martin_Sjogard.pdf
     - icon: envelope
+      text: email
       href: mailto:martinsjogard@gmail.com
 
 ---
