--- a/index.qmd
+++ b/index.qmd
@@ -15,11 +15,11 @@ about:
 ---
 
 ## About Me
-The picture is a high-resolution 3D printed copy of my own brain.
+The picture is a 3D printed copy of my own brain.
 
 I am a clinical data scientist in the [Sleep, Cognition and Neuropsychology](https://manoachlab.mgh.harvard.edu/) lab at [Massachusetts General Hospital](https://www.massgeneral.org/) and a postdoctoral research fellow at [Harvard Medical School](https://hms.harvard.edu/).
 
-My expertise is in statistical and computational analysis of health-related data, with a focus on neuroimaging and electrophysiological signals in neuropsychiatric disorders. I create and maintain validated, reproducible analysis pipelines and develop advanced statistical methods to support translational research and biomarker discovery. You can read up on some of my methods development work in [anatomically guided MEG/EEG sleep spindle detection](https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full) and [resolving source localization disagreement in resting-state networks](https://www.sciencedirect.com/science/article/abs/pii/S105381191930549X), or my work on [the relationship between cortical network disruption and cognitive impairment in multiple sclerosis](https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25247), how sleep spindles topography relates to memory encoding and consolidation, or how [hippocampal ripples facilitate wake offline learning](https://www.nature.com/articles/s41467-025-61136-y).
+My expertise is in statistical and computational analysis of health-related data, with a focus on neuroimaging and electrophysiological signals in neuropsychiatric disorders. I create and maintain validated, reproducible analysis pipelines and develop advanced statistical methods to support translational research and biomarker discovery. You can read up on some of my methods development work in [anatomically guided MEG/EEG sleep spindle detection](https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full) and [resolving source localization disagreement in resting-state networks](https://www.sciencedirect.com/science/article/abs/pii/S105381191930549X), or my work on [the relationship between cortical network disruption and cognitive impairment in multiple sclerosis](https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25247), how sleep spindles topography relates to memory encoding and consolidation, or [how hippocampal ripples facilitate wake offline learning](https://www.nature.com/articles/s41467-025-61136-y).
 
 I received a PhD in Biomedical and Pharmaceutical Sciences at the [Université libre de Bruxelles](https://www.ulb.be/en/ulb-homepage) and hold a master's degree in Neuroscience and a bachelor's degree in Human Movement Science, both from the [Norwegian University of Science and Technology](https://www.ntnu.edu/).
 
