--- a/posts/quicksummaries_localspindles/index.qmd
+++ b/posts/quicksummaries_localspindles/index.qmd
@@ -7,7 +7,7 @@ page: true
 categories: [Neuroscience, Sleep, Spindles, Memory, Learning, Consolidation]
 ---
 
-This is a non-technical (or at least less technical) summary of the paper "Increased sleep spindles in regions engaged during motor learning predict memory consolidation" by Sjøgård et al. (2025), which was recently published in Journal of Neuscience.
+This is a non-technical (or at least less technical) summary of the paper "Increased sleep spindles in regions engaged during motor learning predict memory consolidation" by Sjøgård et al. (2025), which was recently published in the Journal of Neuroscience.
 
 
 ## Background: Learning and consolidation
@@ -25,13 +25,13 @@ They get better! Participants have improved just by sleeping, by an average of 1
 
 This is all in line with previous research. Sleep-dependent memory consolidation is a well studied phenomenon and both the initial learning rate and consolidation are about what we would expect. In order to discuss the actual research question of this paper we need to introduce some neuroimaging. Specifically, we need to talk about MEG and EEG, sleep spindles and the concept of cortical task activation. We can do all three by discussing what the previous literature had shown and what we found to be a critical missing piece of research.
 
-# MEG and EEG
+## MEG and EEG
 We wanted to measure participants' brain activity while they performed the MST and while they were sleeping, so that we could look at relationships between what happened in their brains while they were learning and while they were consolidating during the nap. We also had them come in one week earlier to measure their brain activity during a nap without any learning beforehand, as a baseline.
 
-# Sleep spindles and sleep spindle detection
+## Sleep spindles and sleep spindle detection
 .
 
-# Task activation and the concept of a *task region*.
+## Task activation and the concept of a *task region*.
 .
 
 ![Fig. 3: Individual studies had used each methodology, but none had used them all in combination.](venndiagram.png){width=450}
